# UTime

./: .gitignore  README.md  pyproject.toml  setup.cfg
Model/: CostFunctions.py  EvaluateAndPred.py  __init__.py
UTime/: CommonArchitecture.py  CostFunctions.py  CrossValidation.py  EarlyStopping.py  EvaluateAndPred.py  LSTM.py  Tests.ipynb  Training.py  UTime.py  UTimeMoments.py  UTimeResNet.py  VaryParameter.py  __init__.py  architecture.py  architecture2D.py  architecture2D_old.py  architectureAutoEncoder.py  architectureEntangledMomentsSpectro.py  architectureMoments.py  architectureMultipleKernels.py  architectureMultitask.py  architectureResNet.py  architectureSpectro2D.py
UTime/GradientBoosting/: __init__.py
